# compile-time-benchmark

./: .gitignore  README.md  docker-compose.yml
diesel/: Cargo.toml
diesel/migrations/2023-03-07-192445_init_tables/: down.sql  up.sql
diesel/src/: main.rs  schema.rs
postgres_connector/: Cargo.toml
postgres_connector/src/: main.rs
sea_orm/: .env  Cargo.toml
sea_orm/src/: main.rs  models.rs  schema.rs
sqlx_offline/: .env  Cargo.toml  sqlx-data.json
sqlx_offline/src/: main.rs
sqlx_online/: .env  Cargo.toml
sqlx_online/src/: main.rs
